# ai-app-lab

demohouse/live_voice_call/: .env.example  .gitignore  README.md  docker-compose.yml
demohouse/live_voice_call/backend/: Dockerfile  README.md  admin_api.py  admin_store.py  ark_responses_adapter.py  async_log.py  check_llm_asr_tts.py  event.py  handler.py  interview_flow.py  interview_judge.py  llm_limiter.py  prompt.py  pyproject.toml  run_interview_simulation.py  sauc_asr_client.py  service.py  startup_self_check.py
demohouse/live_voice_call/backend/artifacts/: interview_simulation.txt
demohouse/live_voice_call/backend/tests/: test_admin_api_csv.py  test_admin_api_interview_checkins.py  test_admin_store.py  test_ark_responses_adapter.py  test_async_log.py  test_audio_persistence.py  test_handler_connection_close_source.py  test_handler_logging.py  test_handler_startup.py  test_interview_flow.py  test_interview_judge.py  test_llm_limiter.py  test_sauc_asr_client.py  test_service_asr_init.py  test_service_asr_turn_end.py  test_service_interview_llm.py  test_startup_self_check.py
demohouse/live_voice_call/deploy/: 10-init-dummy-cert.sh  DEPLOY.md  nginx.conf  ssl.sh
demohouse/live_voice_call/deploy/letsencrypt/live/: __active__
demohouse/live_voice_call/docs/modules/: README.md
demohouse/live_voice_call/docs/modules/backend/: README.md  __init__.md  admin_api.md  admin_store.md  async_log.md  event.md  (+10 more)
demohouse/live_voice_call/frontend/: ARCHITECTURE_API.md  Dockerfile  modern.config.ts
demohouse/live_voice_call/frontend/src/: App.tsx  index.css  types.ts
(+86 files in other folders)
