[tool.poetry]
name = "live-voice-call"
version = "0.1.0"
description = ""
authors = ["liuminghao <liuminghao.lm@bytedance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
arkitect = ">=0.1.5,<0.2.0"
volcengine-python-sdk = "==5.0.19"
fastapi = ">=0.116.0,<0.117.0"
uvicorn = ">=0.29.0,<0.30.0"
python-multipart = ">=0.0.20,<0.0.21"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
